mobile/scss/modules/profile.scss
/* ... */
.reviews-list{
  .item{
    margin-bottom: 2px;

    > .ico{
      float: left;
      margin-right: 15px;
    }

    .review{
      overflow: hidden;

      .top{
        padding: 3px 0 5px;
        overflow: hidden;
        height: auto;

        .rating{
          font-size: 17px;

          li{
            float: left;

            i{color: #3b9fa1;}
          }
        }

        .time{
          float: right;
        }
      }

      .title{
        display: block;
        overflow: hidden;
        text-overflow: ellipsis;
        padding: 0 0 5px;
      }
      .message{
        margin: 0 0 5px;
        display: block;
        display: -webkit-box;
        overflow: hidden;
        white-space: normal;
        text-overflow: ellipsis;
        -webkit-box-orient: vertical;
        -webkit-line-clamp: 3;
      }
      .button-holder{
        overflow: hidden;

        button{
          float: right;
          padding: 0 25px;
          min-height: 26px;
        }
      }
    }
  }
}

.button {
    &.button-pos-tr {
        // position: relative;
        // top: 10px;
        // right: 10px;
        float: right;
        top: -15px;
        // max-height: 20px;
        // min-height: 18px;
    }
}

.profile-pane {
   .view-section & .list.scroll-view {
        top: 0px;
    }
    
  .list{
    margin: 0 0;
    padding-top: 20px;
  }
  
  .experience-list .list {
      .item:last-child {
          margin-bottom: 50px;
      }
  }

  .profile-list, .experience-list, activity-list {
      .row {
        margin-bottom: 0px;
        
            .row {
                margin-bottom: 10px;
            }
          
          & > div {
            // border: 1px solid purple;
            padding: 10px;
        }
      }
      
      .row.nested > div {
          padding: 0;
      }
      
      margin-left: 20px;
      margin-right: 20px;
      
      > .item {
        //background: none;
        padding: 10px 0 15px;
        border: none;
          
        
        .item-label{
            font-weight: bold;
            color: $gradient-bottom;
        }
        .item-title {
            font-size: 1.1em;
        }
      }
      
      .list {
          padding-top: 0;
      }
      
      
      
         
        .card {
            &.has-title {
                padding-top: 0;
            }
            
            margin-left: 0;
            margin-right: 0;
            
            .item-heading {
                background-color: $gradient-bottom;
                margin-top: 0;
                padding-left: 10px;
                
                .item-title, .button {
                    color: $stable!important;
                }
            }
         }
      
      
 	  .item {
              
        .license-lbl {
            line-height: 36px;
        }
        
        .endorsements-list{
            float: right;
            width: auto;
        }
 
        endorsements-row{
            padding-top: 0;
            line-height: 31px;
        }

        &.item-divider{
            padding: 0;
            height: 1px;
            margin-bottom: 15px;
            min-height: 0;
            background: #D2D2D2;
        }

        .item-note{
            //width: 40%;
            text-align: right;
            color: $content-body-text;
            white-space: normal;
            
            .equipment-logo {
                position: relative;

                > div {
                    margin-right: 0;
                }
                .badge{
                    top: auto;
                    bottom: -13px;
                    right: 0;
                }
            }
        }
        
        .item-loading ion-spinner svg {
            width: 48px;
            height: 48px;
        }
    }
  }    
  
}
    
.experience-list{
  .center{
    text-align: center;
  }
  .item {
    //background: none;
    padding: 10px 15px 3px;
    border-bottom: 1px solid #ddd;
    color: #666;
    
    .edit-btn {
      float: right;
      top: -10px;
      right: -10px;
    }
    
    .experience-heading {
        font-weight: 500;
        margin-right: 25px;
        display: flexbox;
        padding-bottom: 3px;
        
      .title {
        display: block;
        text-transform: capitalize;
        margin-bottom: 3px;
      }
      
      .company{
          display: inline-block;
        font-size: 0.85em;
        text-transform: uppercase;
        color: $positive;
      }
    }
    

    .description {
      border-top: 1px solid $stable;
      padding-top: 3px;
      
      white-space: normal;
      text-overflow: initial;
      
      display: block;
      margin-bottom: 5px;
      line-height: 1.3em;
    }
    
    .props {
      display: inline-block;
      width: 100%;
      border-top: 1px solid $stable;
      padding-top: 3px;
      
      .location {
        font-weight: 400;
        float: left;
        padding: 3px 0;
      }
      
      .time {
        padding: 3px 0;
        float: right;
        
      i {
        margin-right: 4px;
        vertical-align: text-top;
      }
      }
    }
  }
}
/* ... */

